--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
+:root {
+  --canvas-background-main: #464646;
+  --canvas-background-second: #57a34d;
+  --background-main: #161616;
+}
+
+html {
+  background-color: var(--background-main);
+  width: 100%;
+  height: 100%;
+}
+
+.test-wasd-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 300px;
+  left: 20px;
+  width: 100px;
+  height: 100px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.test-w-container {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.test-asd-container {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.test-wasd {
+  position: relative;
+  width: 25px;
+  height: 25px;
+  border: 1px solid grey;
+  cursor: default;
 }
+
+.container-canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 5%;
+  left: 10%;
+}
+
+.canvas {
+  position: absolute;
+  /* width: 100%;
+  height: 100%; */
+  /* width: 100%;
+  height: 100%;
+  flex-grow: 0;
+  flex-shrink: 0; */
+}
+
+.canvas-background-main {
+  /* background-color: var(--canvas-background-main); */
+}
+
+.canvas-background-second {
+  /* background-color: var(--canvas-background-main);
+  background-color: var(--canvas-background-second); */
+}
+
+.background-main {
+  background-color: var(--background-main);
+}
+
