bg elements and improved code

--- a/src/App.css
+++ b/src/App.css
@@ -62,13 +62,14 @@ html {
 }
 
 .canvas-background-main {
-  background-color: var(--canvas-background-main);
+  /* background-color: var(--canvas-background-main); */
 }
 
 .canvas-background-second {
-  /* background-color: var(--canvas-background-main);
-  background-color: var(--canvas-background-second); */
+  background-color: var(--canvas-background-main);
 }
+
+
 
 .background-main {
   background-color: var(--background-main);
