--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 :root {
   --canvas-background-main: #464646;
   --canvas-background-second: #57a34d;
+  --purple-light: #7700ff;
+  --purple-dark: #4d00a5;
   --background-main: #161616;
+  --transition-time: 0.4s;
+  --shadow-radius: 25px;
 }
 
 html {
@@ -43,12 +47,65 @@ html {
   cursor: default;
 }
 
+.ui-start-container {
+  position: absolute;
+  z-index: 11;
+  top: 5%;
+  left: 26%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: default;
+}
+
+.container-git-link{
+  margin-top: 4em;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  white-space: nowrap;
+}
+
+.label-start {
+  margin-top: 50px;
+  position: relative;
+  width: auto;
+  height: auto;
+  font-size: 6rem;
+  color: #ffffff;
+}
+
+.btn-start {
+  margin-top: 70px;
+  position: relative;
+  font-size: 4.5rem;
+  font-weight: 600;
+  background-color: var(--purple-dark);
+  color: #ffffff;
+  width: 300px;
+  height: 150px;
+  border-radius: 15px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-color: transparent;
+  transition-duration: var(--transition-time);
+}
+
+.btn-start:hover {
+  box-shadow: 0 0 var(--shadow-radius) var(--purple-light);
+  background-color: var(--purple-light);
+  color: #ffffff;
+}
+
 .container-canvas {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 5%;
-  left: 10%;
+  /* width: 100%;
+  height: 100%; */
+  top: 0;
+  left: 5%;
 }
 
 .canvas {
