--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ html {
   background-color: var(--background-main);
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .test-wasd-container {
@@ -48,10 +49,12 @@ html {
 }
 
 .ui-start-container {
-  position: absolute;
+  position: relative;
+  width: 100%;
+  height: 100%;
   z-index: 11;
-  top: 5%;
-  left: 26%;
+  /* top: 5%;
+  left: 26%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,7 +108,7 @@ html {
   /* width: 100%;
   height: 100%; */
   top: 0;
-  left: 5%;
+  left: 0;
 }
 
 .canvas {
