--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --blue-dark: #0075d4;
   --transition-time: 0.4s;
   --shadow-radius: 25px;
+  --border-radius-btn: 15px;
 }
 
 h1 {
@@ -30,36 +31,37 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  font-family: 'Audiowide';
+  font-family: 'Audiowide', cursive;
   letter-spacing: 1.5px;
 }
 
 button {
-  list-style-type: none;
+  font-family: inherit;
   margin: 30px 0;
   text-align: center;
   cursor: pointer;
-  border-radius: 15px;
   color: #ffffff;
   border-color: transparent;
-  cursor: pointer;
   border: none;
   outline: none;
-  border-radius: 15px;
-  font-family: inherit;
+  border-radius: var(--border-radius-btn);
+  transition-duration: var(--transition-time);
 }
 
 a {
   text-decoration: none;
   color: #ffffff;
+  display: inline-block;     
+  position: relative;       
+  padding: 12px;     
+  margin: -12px;
+  border-radius: var(--border-radius-btn);
 }
 
 .button-blue {
   font-size: 2rem;
   font-weight: 600;
-  list-style-type: none;
   margin: 10px 0;
-  transition-duration: var(--transition-time);
   background-color: var(--blue-dark);
   padding: 10px 15px 10px;
 }
@@ -68,7 +70,6 @@ a {
   box-shadow: 0 0 var(--shadow-radius) var(--blue-light);
   background-color: var(--purple-light);
   color: #ffffff;
-  transition-duration: var(--transition-time);
   background-color: var(--blue-light);
 }
 
@@ -146,7 +147,6 @@ a {
   box-shadow: 0 0 var(--shadow-radius) var(--purple-light);
   background-color: var(--purple-light);
   color: #ffffff;
-  transition-duration: var(--transition-time);
 }
 
 .container-canvas {
