--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ h1 {
   animation: color-change infinite 13s;
 }
 
+h2 {
+  color: var(--purple-light);
+}
+
 h4 {
   color: #ffffff;
 }
@@ -56,6 +60,15 @@ a {
   padding: 12px;     
   margin: -12px;
   border-radius: var(--border-radius-btn);
+}
+
+.mobile-placeholder {
+  margin: 20px;
+}
+
+.mobile-placeholder-img {
+  width: 50%;
+  height: 70%;
 }
 
 .button-blue {
