--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,15 @@
   --border-radius-btn: 15px;
 }
 
+body {
+  background-color: var(--background-main);
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-family: 'Audiowide', sans-serif;
+  letter-spacing: 1.5px;
+}
+
 h1 {
   margin-top: 40px;
   position: relative;
@@ -18,7 +27,7 @@ h1 {
   height: auto;
   font-size: 5rem;
   cursor: default;
-  animation: color-change infinite 13s;
+  animation: 13s infinite color-change;
 }
 
 h2 {
@@ -28,15 +37,6 @@ h2 {
 
 h1, h4, h5 {
   color: #ffffff;
-}
-
-body {
-  background-color: var(--background-main);
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  font-family: 'Audiowide', cursive;
-  letter-spacing: 1.5px;
 }
 
 button {
@@ -71,7 +71,7 @@ a {
   height: 70%;
 }
 
-.mobile-button-placeholder {
+.mobile-placeholder-button {
   font-size: 0.8rem;
   font-weight: 600;
   margin: -5px;
